--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Demo Cool Drawer</string>
+    <string name="app_name">P11 - My Data Book</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="drawer_open">Open</string>
